# vxt

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
assets/drawio/: entities.drawio
tests/audio/: file_audio_source_test.py  playlist_test.py  processor_test.py  track_test.py  volatile_audio_test.py
tests/misc/: speech_engine_test.py  track_fmt_test.py
tests/view/: args_test.py  config_test.py  context_test.py  validator_test.py
vxt/: __init__.py  __main__.py
vxt/audio/: __init__.py  audio.py  audio_source.py  error.py  file_audio_source.py  playlist.py  processor.py  speaker.py  track.py  volatile_audio.py
vxt/misc/: __init__.py  speech_engine.py  track_fmt.py
vxt/speech2text/: bing.py  engine.py  error.py  google.py  google_cloud.py  houndify.py  ibm.py  sphinx.py
vxt/view/: __init__.py  args.py  config.py  context.py  helper.py  validator.py  view.py
vxt/view/task/: factory.py  task.py
vxt/view/task/audio/: amplify.py  delete_track.py  export.py  normalize.py  play.py  rename_track.py  split.py  split_silence.py  split_track.py
vxt/view/task/misc/: fmt.py
vxt/view/task/speech2text/: manual.py  speech.py
